--- a/app/views/employeeinfodetails/new.html.erb
+++ b/app/views/employeeinfodetails/new.html.erb
@@ -61,7 +61,7 @@
             <div class="col-4">
                 <%= link_to "javascript:void(0)", 
                 class: 'btn btn-danger remove_certi' do %>
-                    <i class="bi bi-trash"></i>
+                    <i class="bi bi-trash3"></i>
                 <% end %>
             </div>
         </div>
