--- a/app/views/employeeinfodetails/index.html.erb
+++ b/app/views/employeeinfodetails/index.html.erb
@@ -1,38 +1,41 @@
-<div class="container">
+<div class="container my-4">
   <div class="row">
     <div class="col-md-12">
-      <h1>Employee Info Details</h1>
-      <%= link_to 'Create', new_employeeinfodetail_path, class: "btn btn-primary mt-4 mb-3" %>
+      <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="h3">Employee Info Details</h1>
+        <%= link_to 'Create New Employee', new_employeeinfodetail_path, class: 'btn btn-primary' %>
+      </div>
 
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Actions / Operations</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% if @employees.any? %>
-            <% @employees.each do |employee| %>
+      <div class="table-responsive">
+        <table class="table table-striped table-hover align-middle">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">First Name</th>
+              <th scope="col">Last Name</th>
+              <th scope="col">Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% if @employees.any? %>
+              <% @employees.each do |employee| %>
+                <tr>
+                  <td><%= employee.id %></td>
+                  <td><%= employee.firstname %></td>
+                  <td><%= employee.lastname %></td>
+                  <td>
+                    <%= link_to 'Details', employeeinfodetail_path(employee), class: 'btn btn-outline-info btn-sm' %>
+                  </td>
+                </tr>
+              <% end %>
+            <% else %>
               <tr>
-                <td><%= employee.id %></td>
-                <td><%= employee.firstname %></td>
-                <td><%= employee.lastname %></td>
-                <td>
-                
-                  <%= link_to 'Details', employeeinfodetail_path(employee), class: 'btn btn-info' %>
-                </td>
+                <td colspan="4" class="text-center text-muted">No employee records found.</td>
               </tr>
             <% end %>
-          <% else %>
-            <tr>
-              <td colspan="4" class="text-center">No records found</td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
